cabal-version:      2.4
name:               graphql
version:            0.1.0.0
build-type:         Simple
category:           Web

-- A short (one-line) description of the package.
synopsis: An attempt at a graphql implementation

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Jose Torres
maintainer:         josetorrs7@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:     app
    exposed-modules:    Data.GraphQL
                      , Data.GraphQL.Document
                      , Data.GraphQL.Parser
    build-depends:      base >= 4.7 && < 5
                      , containers
                      , megaparsec
                      , mtl
                      , text
    default-language:    Haskell2010

test-suite graphql-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graphql
                     , filepath
                     , hspec
                     , QuickCheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
